--- a/tex/seq64_menu.tex
+++ b/tex/seq64_menu.tex
@@ -321,6 +321,10 @@
    One could theoretically play music through 6 or 7 devices using
    \textsl{Sequencer64} with this setup.
 
+   \textbf{TODO:} \index{todo!manual alsa gui option}
+   There is currently no user-interface item corresponding to this command-line
+   and "rc" configuration file option.
+
 \paragraph{Menu / File / Options / MIDI Input}
 \label{paragraph:seq64_menu_file_options_midi_input}
 
@@ -501,12 +505,12 @@
    It is the \textbf{Insert} key by default.
 
    \itempar{Disable}{keyboard!disable}
-   TODO: \index{todo!keyboard disable} What gets disabled?
+   \textbf{TODO:} \index{todo!keyboard disable} What gets disabled?
    \index{keys!apostrophe}
    It is the \textbf{apostrophe} key by default.
 
    \itempar{Enable}{keyboard!enable}
-   TODO: What gets enabled?
+   \textbf{TODO:} What gets enabled?
    \index{keys!igrave}
    It is the \textbf{igrave} (back-tick) key by default.
 
@@ -605,11 +609,12 @@
    To get out of the paint mode, press the
    \index{keys!P}
    "P" (shift-p) key while in the sequence editor.
+   These keys, however, do not work (currently) while the sequence is playing.
 
    \index{todo:extend mouse support}
    \textbf{TODO:} These convenience options are currently limited to the
    pattern/sequence editor window and the performance editor window, and may
-   need some heavier testing But note that some \textsl{Sequencer64} windows
+   need some heavier testing.  But note that some \textsl{Sequencer64} windows
    can use the ctrl-left-click as a middle click. 
 
 \paragraph{Menu / File / Options / Jack Sync}
