--- a/README
+++ b/README
@@ -47,4 +47,4 @@ all of the generated products.
 Lastly, although this manual is well underway, it needs a lot of work and
 a lot of help!  It is still a work in progress.
 
-# vim: ts=3 sw=3 et ft=text
+# vim: ts=3 sw=3 et ft=sh
