--- a/tex/seq64_concepts.tex
+++ b/tex/seq64_concepts.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2015-11-02
+% \update      2015-11-03
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -21,8 +21,8 @@
    fairly simple interface.  Before we describe this interface, it is useful
    to present some concepts and definitions of terms as
    they are used in \textsl{Sequencer64}.  Various terms have been used over
-   the years to mean the same (e.g. "sequence", "pattern", "loop", and "slot"),
-   so it is good to clarify the usage here.
+   the years to mean the same thing (e.g. "sequence", "pattern", "loop", and
+   "slot"), so it is good to clarify the terminology.
 
 \subsection{Concepts / Terms}
 \label{subsec:concepts_terms}
@@ -35,14 +35,14 @@
 \label{subsubsec:concepts_terms_armed}
 
    \index{armed}
-   An armed sequence is a sequence that will be heard.
-   "Armed" is the opposite of "muted".
-   Performing an \textsl{arm} operation in \textsl{Sequencer64} means clicking on
-   an "unarmed" sequence in the patterns panel (the main window of
-   \textsl{Sequencer64}).  An unarmed sequence will not be heard, and it
-   has a white background.  When the sequence is \textsl{armed},
-   it will be heard, and it has a black background.
-
+   An armed sequence is a sequence
+   (see \sectionref{subsubsec:concepts_terms_sequence})
+   that will be heard.  "Armed" is the opposite
+   of "muted".  Performing an \textsl{arm} operation in \textsl{Sequencer64}
+   means clicking on an "unarmed" sequence in the patterns panel (the main
+   window of \textsl{Sequencer64}).  An unarmed sequence will not be heard, and
+   it has a white background.  When the sequence is \textsl{armed}, it will be
+   heard, and it has a black background.
    A sequence can be armed or unarmed in three ways:
 
    \begin{itemize}
@@ -62,6 +62,8 @@
    \url{https://en.wikipedia.org/wiki/Busbar}) is an entity onto which
    MIDI events can be placed, in order to be heard or to affect the
    playback.
+   A \textsl{buss} is just another name for port.
+   See \sectionref{subsubsec:concepts_terms_port}.
 
 \subsubsection{Concepts / Terms / group}
 \label{subsubsec:concepts_terms_group}
@@ -142,6 +144,14 @@
    This layout of patterns is created using the Song Editor, sometimes
    called the "performance editor".
 
+\subsubsection{Concepts / Terms / port}
+\label{subsubsec:concepts_terms_port}
+
+   \index{port}
+   A \textsl{port} is just another name for buss.
+   See \sectionref{subsubsec:concepts_terms_buss}.
+   Each port can support 16 MIDI channels.
+
 \subsubsection{Concepts / Terms / pulses per quarter note}
 \label{subsubsec:concepts_terms_pulses}
 
@@ -201,6 +211,10 @@
    documentation.  \textsl{Loop} is another synonym.
    Each sequence is represented by a box (pattern slot) in the Patterns window.
 
+   Note that many, for other sequencer applications) use the term "sequence"
+   to apply to the complete song, and not just to one track or pattern in the
+   entire song.
+
 \subsubsection{Concepts / Terms / snapshot}
 \label{subsubsec:concepts_terms_snapshot}
 
@@ -257,7 +271,6 @@
    API and infrastructure for making it easier to connect and reroute MIDI
    and audio event between various applications and hardware ports.
    See reference \cite{jack}.
-
 
 %-------------------------------------------------------------------------------
 % vim: ts=3 sw=3 et ft=tex
